Bug 14846 - acer-wmi kernel OOPS, cannot create duplicit sysfs name
Summary: acer-wmi kernel OOPS, cannot create duplicit sysfs name
Status: CLOSED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Platform (show other bugs)
Hardware: i386 Linux
: P1 high
Assignee: Carlos Corbacho
URL:
Keywords:
Depends on:
Blocks: 14885 56331
  Show dependency tree
 
Reported: 2009-12-19 23:44 UTC by Oldřich Jedlička
Modified: 2013-04-09 06:23 UTC (History)
5 users (show)

See Also:
Kernel Version: 2.6.33-rc1
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments
dmesg output (67.57 KB, text/plain)
2009-12-19 23:44 UTC, Oldřich Jedlička
Details
Content of /proc/acpi/dsdt (41.38 KB, application/octet-stream)
2009-12-23 20:50 UTC, Oldřich Jedlička
Details

Description Oldřich Jedlička 2009-12-19 23:44:43 UTC
Created attachment 24234 [details]
dmesg output

The boot fails completely (no usable trace) when the acer-wmi+wmi is in-kernel. I've compiled it as module, so here is the trace extract (full trace included):

[   86.439943] WARNING: at fs/sysfs/dir.c:477 sysfs_add_one+0x65/0x7a()
[   86.439951] Hardware name: TravelMate 5730
[   86.439957] sysfs: cannot create duplicate filename '/devices/virtual/wmi/05901221-D566-11D1-B2F0-00A0C9062910'
Comment 1 Oldřich Jedlička 2009-12-20 08:46:25 UTC
This is on Acer TravelMate 5730G.
Comment 2 Zhang Rui 2009-12-22 01:37:27 UTC
re-assign to John, the maintainer of acer-wmi driver.
Comment 3 John W. Linville 2009-12-22 03:24:35 UTC
Thanks, Len, for reassigning properly.  Now, anyone have any idea how get_maintainer.pl named me and Johannes for acer_wmi.c?

./scripts/get_maintainer.pl -f drivers/platform/x86/acer-wmi.c 
Carlos Corbacho <carlos@strangeworlds.co.uk>
John W. Linville <linville@tuxdriver.com>
Len Brown <len.brown@intel.com>
Alan Jenkins <alan-jenkins@tuffmail.co.uk>
Johannes Berg <johannes@sipsolutions.net>
linux-kernel@vger.kernel.org
Comment 4 Carlos Corbacho 2009-12-23 19:01:47 UTC
Looks like a bug in the ACPI-WMI driver, not acer-wmi. Probably related to the change for autoloading which added the sysfs interface.

Oldřich, can you please attach your DSDT?
Comment 5 Oldřich Jedlička 2009-12-23 20:50:31 UTC
Created attachment 24271 [details]
Content of /proc/acpi/dsdt
Comment 6 Len Brown 2009-12-26 20:24:47 UTC
http://patchwork.kernel.org/patch/69795/

applied to acpi-test tree
Comment 7 Oldřich Jedlička 2009-12-27 12:41:45 UTC
Confirmed, works for me.
Comment 8 Rafael J. Wysocki 2009-12-27 22:19:45 UTC
Handled-By : Carlos Corbacho <carlos@strangeworlds.co.uk>
Patch : http://patchwork.kernel.org/patch/69795/
Comment 9 Oldřich Jedlička 2009-12-28 09:17:13 UTC
Tested-by: Oldřich Jedlička <oldium.pro@seznam.cz>
Comment 10 Rafael J. Wysocki 2010-01-10 22:15:06 UTC
Fixed by commit d1f9e4970742bb1e22d07b01bd44f9c357d25c42 .

Note You need to log in before you can comment on or make changes to this bug.